@@ -351,14 +351,26 @@ public class FileVectorStore extends VectorStore {
             Object metadataValue = metadata.get(entry.getKey());
             Object filterValue = entry.getValue();
 
-            if (!Objects.equals(metadataValue, filterValue)) {
-                return false;
+            if (filterValue instanceof Values filterValues && filterValues.isList()) {
+                boolean found = false;
+                for (Object item : filterValues.list()) {
+                    if (Objects.equals(metadataValue, item)) {
+                        found = true;
+                        break;
+                    }
+                }
+                if (!found) {
+                    return false;
+                }
+            } else {
+                if (!Objects.equals(metadataValue, filterValue)) {
+                    return false;
+                }
             }
         }
 
         return true;
     }
-
     private double cosineSimilarity(List<Double> a, List<Double> b) {
         if (a == null || b == null || a.isEmpty() || b.isEmpty() || a.size() != b.size()) {
             return -1.0;
@@ -1224,12 +1236,14 @@ public class FileVectorStore extends VectorStore {
             )
     })
     public boolean createCollection(String collection, int dimensions) {
-        if (collection == null || collection.trim().isEmpty()) {
+        if (collection == null || collection.isBlank()) {
+            LOGGER.warn("Collection name cannot be null or blank.");
             return false;
         }
 
         if (dimensions <= 0) {
-            throw new IllegalArgumentException("Dimensions must be greater than zero");
+            LOGGER.warn("Dimensions must be greater than zero, got: {}", dimensions);
+            return false;
         }
 
         ReentrantLock lock = getLock();
@@ -1435,6 +1449,255 @@ public class FileVectorStore extends VectorStore {
             }
 
             return collectionData.getDocuments().size();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    @Override
+    @MethodDoc(translations = {
+            @MethodTranslationDoc(
+                    language = LanguageDoc.PT,
+                    description = "Retorna todos os documentos de uma coleção, sem qualquer filtragem.",
+                    howToUse = {
+                            @SourceCodeDoc(
+                                    type = SourceCodeTypeDoc.JavaScript,
+                                    code = "const documentos = vector.getAll('netuno')\n"
+                                            + "\n"
+                                            + "for (const doc of documentos) {\n"
+                                            + "    _log.info(doc.get('id') + ' | ' + doc.get('text'))\n"
+                                            + "}"
+                            )
+                    }
+            ),
+            @MethodTranslationDoc(
+                    language = LanguageDoc.EN,
+                    description = "Returns all documents in a collection, without any filtering.",
+                    howToUse = {
+                            @SourceCodeDoc(
+                                    type = SourceCodeTypeDoc.JavaScript,
+                                    code = "const documents = vector.getAll('netuno')\n"
+                                            + "\n"
+                                            + "for (const doc of documents) {\n"
+                                            + "    _log.info(doc.get('id') + ' | ' + doc.get('text'))\n"
+                                            + "}"
+                            )
+                    }
+            )
+    }, parameters = {
+            @ParameterDoc(name = "collection", translations = {
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.PT,
+                            name = "colecao",
+                            description = "Nome da coleção a consultar."
+                    ),
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.EN,
+                            description = "Name of the collection to query."
+                    )
+            })
+    }, returns = {
+            @ReturnTranslationDoc(
+                    language = LanguageDoc.PT,
+                    description = "Lista com todos os documentos da coleção. Cada item contém: `id`, `text`, `embedding`, `metadata` e `timestamp`."
+            ),
+            @ReturnTranslationDoc(
+                    language = LanguageDoc.EN,
+                    description = "List of all documents in the collection. Each item contains: `id`, `text`, `embedding`, `metadata` and `timestamp`."
+            )
+    })
+    public Values getAll(String collection) {
+        return getAll(collection, null);
+    }
+
+    @Override
+    @MethodDoc(translations = {
+            @MethodTranslationDoc(
+                    language = LanguageDoc.PT,
+                    description = "Retorna todos os documentos de uma coleção que correspondam ao filtro de metadados fornecido. "
+                            + "O filtro é aplicado como correspondência exata por igualdade de valor em cada chave. "
+                            + "Para valores em lista, basta que o valor do metadado corresponda a um dos itens da lista.",
+                    howToUse = {
+                            @SourceCodeDoc(
+                                    type = SourceCodeTypeDoc.JavaScript,
+                                    code = "const filtro = _val.map().set('fonte', 'web')\n"
+                                            + "\n"
+                                            + "const documentos = vector.getAll('netuno', filtro)\n"
+                                            + "\n"
+                                            + "for (const doc of documentos) {\n"
+                                            + "    _log.info(doc.get('id') + ' | ' + doc.get('text'))\n"
+                                            + "}"
+                            )
+                    }
+            ),
+            @MethodTranslationDoc(
+                    language = LanguageDoc.EN,
+                    description = "Returns all documents in a collection that match the provided metadata filter. "
+                            + "The filter is applied as exact value equality per key. "
+                            + "For list values, the metadata value only needs to match one item in the list.",
+                    howToUse = {
+                            @SourceCodeDoc(
+                                    type = SourceCodeTypeDoc.JavaScript,
+                                    code = "const filter = _val.map().set('source', 'web')\n"
+                                            + "\n"
+                                            + "const documents = vector.getAll('netuno', filter)\n"
+                                            + "\n"
+                                            + "for (const doc of documents) {\n"
+                                            + "    _log.info(doc.get('id') + ' | ' + doc.get('text'))\n"
+                                            + "}"
+                            )
+                    }
+            )
+    }, parameters = {
+            @ParameterDoc(name = "collection", translations = {
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.PT,
+                            name = "colecao",
+                            description = "Nome da coleção a consultar."
+                    ),
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.EN,
+                            description = "Name of the collection to query."
+                    )
+            }),
+            @ParameterDoc(name = "metadataFilter", translations = {
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.PT,
+                            name = "filtroMetadados",
+                            description = "Objeto com pares chave-valor para filtrar os documentos pelos seus metadados. Se nulo ou vazio, retorna todos os documentos."
+                    ),
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.EN,
+                            description = "Object with key-value pairs to filter documents by their metadata. If null or empty, all documents are returned."
+                    )
+            })
+    }, returns = {
+            @ReturnTranslationDoc(
+                    language = LanguageDoc.PT,
+                    description = "Lista dos documentos correspondentes. Cada item contém: `id`, `text`, `embedding`, `metadata` e `timestamp`."
+            ),
+            @ReturnTranslationDoc(
+                    language = LanguageDoc.EN,
+                    description = "List of matching documents. Each item contains: `id`, `text`, `embedding`, `metadata` and `timestamp`."
+            )
+    })
+    public Values getAll(String collection, Values metadataFilter) {
+        Values results = new Values().forceList();
+
+        if (collection == null || collection.trim().isEmpty()) {
+            return results;
+        }
+
+        ReentrantLock lock = getLock();
+        lock.lock();
+        try {
+            Map<String, CollectionData> store = readStore();
+            CollectionData collectionData = store.get(collection);
+
+            if (collectionData == null) {
+                return results;
+            }
+
+            collectionData.getDocuments().values().stream()
+                    .filter(doc -> matchesFilter(doc.getMetadata(), metadataFilter))
+                    .sorted(Comparator.comparingLong(DocumentData::getTimestamp))
+                    .forEach(doc -> {
+                        Values item = new Values().forceMap();
+                        item.put("id", doc.getId());
+                        item.put("text", doc.getText());
+                        item.put("embedding", embeddingListToValues(doc.getEmbedding()));
+                        item.put("metadata", doc.getMetadata());
+                        item.put("timestamp", doc.getTimestamp());
+                        results.add(item);
+                    });
+
+            return results;
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    @Override
+    @MethodDoc(translations = {
+            @MethodTranslationDoc(
+                    language = LanguageDoc.PT,
+                    description = "Remove todos os documentos de uma coleção que correspondam ao filtro de metadados fornecido. "
+                            + "O filtro é obrigatório e não pode ser nulo nem vazio, para evitar eliminações acidentais de toda a coleção. "
+                            + "Para apagar a coleção inteira utilize `deleteCollection`.",
+                    howToUse = {
+                            @SourceCodeDoc(
+                                    type = SourceCodeTypeDoc.JavaScript,
+                                    code = "const filtro = _val.map().set('fonte', 'web')\n"
+                                            + "\n"
+                                            + "vector.deleteByMetadata('netuno', filtro)\n"
+                                            + "_log.info('Documentos com fonte=web removidos.')"
+                            )
+                    }
+            ),
+            @MethodTranslationDoc(
+                    language = LanguageDoc.EN,
+                    description = "Removes all documents from a collection that match the provided metadata filter. "
+                            + "The filter is mandatory and cannot be null or empty, to prevent accidental deletion of the entire collection. "
+                            + "To delete the entire collection use `deleteCollection`.",
+                    howToUse = {
+                            @SourceCodeDoc(
+                                    type = SourceCodeTypeDoc.JavaScript,
+                                    code = "const filter = _val.map().set('source', 'web')\n"
+                                            + "\n"
+                                            + "vector.deleteByMetadata('netuno', filter)\n"
+                                            + "_log.info('Documents with source=web removed.')"
+                            )
+                    }
+            )
+    }, parameters = {
+            @ParameterDoc(name = "collection", translations = {
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.PT,
+                            name = "colecao",
+                            description = "Nome da coleção de onde os documentos serão removidos."
+                    ),
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.EN,
+                            description = "Name of the collection from which documents will be removed."
+                    )
+            }),
+            @ParameterDoc(name = "metadataFilter", translations = {
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.PT,
+                            name = "filtroMetadados",
+                            description = "Objeto com pares chave-valor que identificam os documentos a remover. Não pode ser nulo nem vazio."
+                    ),
+                    @ParameterTranslationDoc(
+                            language = LanguageDoc.EN,
+                            description = "Object with key-value pairs identifying the documents to remove. Cannot be null or empty."
+                    )
+            })
+    }, returns = {})
+    public void deleteByMetadata(String collection, Values metadataFilter) {
+        if (collection == null || collection.trim().isEmpty()) {
+            throw new IllegalArgumentException("Collection name cannot be null or empty");
+        }
+
+        if (metadataFilter == null || metadataFilter.isEmpty()) {
+            throw new IllegalArgumentException(
+                    "metadataFilter cannot be null or empty in deleteByMetadata — use deleteCollection to remove all documents"
+            );
+        }
+
+        ReentrantLock lock = getLock();
+        lock.lock();
+        try {
+            Map<String, CollectionData> store = readStore();
+            CollectionData collectionData = store.get(collection);
+
+            if (collectionData == null) {
+                return;
+            }
+
+            collectionData.getDocuments().entrySet()
+                    .removeIf(entry -> matchesFilter(entry.getValue().getMetadata(), metadataFilter));
+
+            writeStore(store);
         } finally {
             lock.unlock();
         }
